--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -125,3 +125,9 @@ qbic.access-token.salt=${ACCESS_TOKEN_SALT:1213213213921093213982103821983928139
 qbic.access-token.iteration-count=${ACCESS_TOKEN_ITERATIONS:100000}
 ################### Data Server Information ###################################
 server.download.api.measurement.url=${DOWNLOAD_MEASUREMENT_API_URL:}
+################## External links and contacts ###############################
+qbic.communication.data-manager.source-code.url=https://github.com/qbicsoftware/data-manager-app
+qbic.communication.documentation.url=${DOCUMENTATION_URL:}
+qbic.communication.contact.email=${CONTACT_EMAIL:helpdesk@example.com}
+qbic.communication.contact.subject=${CONTACT_SUBJECT:Data Management Question}
+qbic.communication.api.url=${API_URL:}
