--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -131,3 +131,14 @@ qbic.communication.documentation.url=${DOCUMENTATION_URL:}
 qbic.communication.contact.email=${CONTACT_EMAIL:helpdesk@example.com}
 qbic.communication.contact.subject=${CONTACT_SUBJECT:Data Management Question}
 qbic.communication.api.url=${API_URL:}
+################## oauth provider ###########################
+spring.security.oauth2.client.registration.orcid.client-name=orcid
+spring.security.oauth2.client.registration.orcid.client-id=id
+spring.security.oauth2.client.registration.orcid.client-secret=secret
+spring.security.oauth2.client.registration.orcid.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.orcid.redirect-uri=http://127.0.0.1:8080/dev/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.orcid.scope=/authenticate
+spring.security.oauth2.client.provider.orcid.authorization-uri=https://sandbox.orcid.org/oauth/authorize
+spring.security.oauth2.client.provider.orcid.token-uri=https://sandbox.orcid.org/oauth/token
+
+logging.level.org.springframework.security.web=DEBUG
