--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -11,13 +11,13 @@ logging.level.org.atmosphere=warn
 # entitymanagers requires you to separate your database entity classes into
 # separate packages.
 ### Finance datasource
-qbic.finance.datasource.url=${FINANCE_DB_URL:localhost}
+qbic.finance.datasource.url=${FINANCE_DB_URL:127.0.0.1}
 qbic.finance.datasource.driver-class-name=${FINANCE_DB_DRIVER:com.mysql.cj.jdbc.Driver}
 qbic.finance.datasource.username=${FINANCE_DB_USER_NAME:myusername}
 qbic.finance.datasource.password=${FINANCE_DB_USER_PW:astrongpassphrase!}
 qbic.finance.datasource.ddl-auto=${FINANCE_DB_DDL_AUTO:none}
 ### data-management datasource
-qbic.data-management.datasource.url=${DATAMANAGEMENT_DB_URL:localhost}
+qbic.data-management.datasource.url=${DATAMANAGEMENT_DB_URL:127.0.0.1}
 qbic.data-management.datasource.driver-class-name=${DATAMANAGEMENT_DB_DRIVER:com.mysql.cj.jdbc.Driver}
 qbic.data-management.datasource.username=${DATAMANAGEMENT_DB_USER_NAME:myusername}
 qbic.data-management.datasource.password=${DATAMANAGEMENT_DB_USER_PW:astrongpassphrase!}
@@ -62,7 +62,7 @@ spring.mail.default-encoding=UTF-8
 spring.mail.port=${MAIL_PORT:587}
 # Sometimes additional information about the instance is needed for an email
 # these properties are configured here
-service.host.name=${DM_SERVICE_HOST:localhost}
+service.host.name=${DM_SERVICE_HOST:127.0.0.1}
 service.host.protocol=${DM_HOST_PROTOCOL:https}
 service.host.port=${DM_SERVICE_PORT:-1}
 ###############################################################################
