--- a/project-management/pom.xml
+++ b/project-management/pom.xml
@@ -95,5 +95,9 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-orm</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-oauth2-core</artifactId>
+    </dependency>
   </dependencies>
 </project>
