--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -142,4 +142,4 @@ spring.security.oauth2.client.provider.orcid.authorization-uri=https://sandbox.o
 spring.security.oauth2.client.provider.orcid.token-uri=https://sandbox.orcid.org/oauth/token
 spring.security.oauth2.client.provider.orcid.user-info-uri=https://sandbox.orcid.org/oauth/userinfo
 spring.security.oauth2.client.provider.orcid.jwk-set-uri=https://sandbox.orcid.org/oauth/jwks
-logging.level.org.springframework.security.web=DEBUG
+#logging.level.org.springframework.security.web=DEBUG
