add configuration property for registration endpoint

--- a/user-interface/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/user-interface/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -104,6 +104,11 @@
       "name": "openbis.datasource.dss.url",
       "type": "java.lang.String",
       "description": "URL of the openbis datastore server containing the measurement information"
+    },
+    {
+      "name": "routing.registration.oidc.orcid.endpoint",
+      "type": "java.lang.String",
+      "description": "The routing target for openid connect registration"
     }
   ]
 }
