--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -81,15 +81,28 @@ vaadin.launch-browser=false
 ###############################################################################
 ################### Routing ###################################################
 # route for mail confirmation consumption
-email-confirmation-endpoint=${EMAIL_CONFIRMATION_ENDPOINT:/login}
-email-confirmation-parameter=${EMAIL_CONFIRMATION_PARAMETER:confirm-email}
+routing.email-confirmation.endpoint=${EMAIL_CONFIRMATION_ENDPOINT:/login}
+routing.email-confirmation.confirmation-parameter=${EMAIL_CONFIRMATION_PARAMETER:confirm-email}
 # route for password reset
-password-reset-endpoint=${PASSWORD_RESET_ENDPOINT:/registration/new-password}
-password-reset-parameter=${PASSWORD_RESET_PARAMETER:user-id}
+routing.password-reset.endpoint=${PASSWORD_RESET_ENDPOINT:/registration/new-password}
+routing.password-reset.reset-parameter=${PASSWORD_RESET_PARAMETER:user-id}
 # route to project resource
-project-endpoint=/projects
-project-info-endpoint=/projects/%s/info
-project-samples-endpoint=/projects/%s/samples
+routing.projects.endpoint=/projects
+routing.projects.info.endpoint=/projects/%s/info
+routing.projects.samples.enpoint=/projects/%s/samples
+routing.registration.oidc.orcid.endpoint=${server.servlet.context-path}/register/oidc
+################## oauth provider ###########################
+spring.security.oauth2.client.registration.orcid.client-name=orcid
+spring.security.oauth2.client.registration.orcid.client-id=${OAUTH_CLIENT_ID: id}
+spring.security.oauth2.client.registration.orcid.client-secret=${OAUTH_CLIENT_SECRET: secret}
+spring.security.oauth2.client.registration.orcid.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.orcid.redirect-uri={baseUrl}/login/oauth2/code/orcid
+spring.security.oauth2.client.registration.orcid.scope=openid
+spring.security.oauth2.client.provider.orcid.authorization-uri=https://sandbox.orcid.org/oauth/authorize
+spring.security.oauth2.client.provider.orcid.token-uri=https://sandbox.orcid.org/oauth/token
+spring.security.oauth2.client.provider.orcid.user-info-uri=https://sandbox.orcid.org/oauth/userinfo
+spring.security.oauth2.client.provider.orcid.jwk-set-uri=https://sandbox.orcid.org/oauth/jwks
+#logging.level.org.springframework.security.web=DEBUG
 ###############################################################################
 ################### ActiveMQ Artemis ##########################################
 # ActiveMQ Artemis is used as a global message broker handling
@@ -131,15 +144,3 @@ qbic.communication.documentation.url=${DOCUMENTATION_URL:}
 qbic.communication.contact.email=${CONTACT_EMAIL:helpdesk@example.com}
 qbic.communication.contact.subject=${CONTACT_SUBJECT:Data Management Question}
 qbic.communication.api.url=${API_URL:}
-################## oauth provider ###########################
-spring.security.oauth2.client.registration.orcid.client-name=orcid
-spring.security.oauth2.client.registration.orcid.client-id=${OAUTH_CLIENT_ID: id}
-spring.security.oauth2.client.registration.orcid.client-secret=${OAUTH_CLIENT_SECRET: secret}
-spring.security.oauth2.client.registration.orcid.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.orcid.redirect-uri={baseUrl}/login/oauth2/code/orcid
-spring.security.oauth2.client.registration.orcid.scope=openid
-spring.security.oauth2.client.provider.orcid.authorization-uri=https://sandbox.orcid.org/oauth/authorize
-spring.security.oauth2.client.provider.orcid.token-uri=https://sandbox.orcid.org/oauth/token
-spring.security.oauth2.client.provider.orcid.user-info-uri=https://sandbox.orcid.org/oauth/userinfo
-spring.security.oauth2.client.provider.orcid.jwk-set-uri=https://sandbox.orcid.org/oauth/jwks
-#logging.level.org.springframework.security.web=DEBUG
