Complete flow for registration and login

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -90,7 +90,8 @@ routing.password-reset.reset-parameter=${PASSWORD_RESET_PARAMETER:user-id}
 routing.projects.endpoint=/projects
 routing.projects.info.endpoint=/projects/%s/info
 routing.projects.samples.enpoint=/projects/%s/samples
-routing.registration.oidc.orcid.endpoint=${server.servlet.context-path}/register/oidc
+routing.registration.oidc.orcid.endpoint=/register/oidc
+routing.registration.error.pending-email-verification=/register/pending-email-confirmation
 ################## oauth provider ###########################
 spring.security.oauth2.client.registration.orcid.client-name=orcid
 spring.security.oauth2.client.registration.orcid.client-id=${OAUTH_CLIENT_ID: id}
