--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -130,4 +130,4 @@ qbic.communication.data-manager.source-code.url=https://github.com/qbicsoftware/
 qbic.communication.documentation.url=${DOCUMENTATION_URL:https://qbicsoftware.github.io/research-data-management/}
 qbic.communication.contact.email=${CONTACT_EMAIL:helpdesk@example.com}
 qbic.communication.contact.subject=${CONTACT_SUBJECT:Data Management Question}
-qbic.communication.api.url=${API_URL:https://qbicsoftware.github.io/research-data-management/rawdata/raw_data_download_introduction/}
+qbic.communication.api.url=${API_URL:https://download.qbic.uni-tuebingen.de/swagger-ui.html}
