Provide default contact email

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -128,6 +128,6 @@ server.download.api.measurement.url=${DOWNLOAD_MEASUREMENT_API_URL:}
 ################## External links and contacts ###############################
 qbic.communication.data-manager.source-code.url=https://github.com/qbicsoftware/data-manager-app
 qbic.communication.documentation.url=${DOCUMENTATION_URL:https://qbicsoftware.github.io/research-data-management/}
-qbic.communication.contact.email=${CONTACT_EMAIL:helpdesk@example.com}
+qbic.communication.contact.email=${CONTACT_EMAIL:support@qbic.zendesk.com}
 qbic.communication.contact.subject=${CONTACT_SUBJECT:Data Management Question}
 qbic.communication.api.url=${API_URL:https://download.qbic.uni-tuebingen.de/swagger-ui.html}
