add environment variables

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -94,15 +94,15 @@ routing.registration.oidc.orcid.endpoint=/register/oidc
 routing.registration.error.pending-email-verification=/register/pending-email-confirmation
 ################## oauth provider ###########################
 spring.security.oauth2.client.registration.orcid.client-name=orcid
-spring.security.oauth2.client.registration.orcid.client-id=${OAUTH_CLIENT_ID: id}
-spring.security.oauth2.client.registration.orcid.client-secret=${OAUTH_CLIENT_SECRET: secret}
+spring.security.oauth2.client.registration.orcid.client-id=${OAUTH_CLIENT_ID:id}
+spring.security.oauth2.client.registration.orcid.client-secret=${OAUTH_CLIENT_SECRET:secret}
 spring.security.oauth2.client.registration.orcid.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.orcid.redirect-uri={baseUrl}/login/oauth2/code/orcid
+spring.security.oauth2.client.registration.orcid.redirect-uri=${ORCID_REDIRECT_URI:{baseUrl}/login/oauth2/code/orcid}
 spring.security.oauth2.client.registration.orcid.scope=openid
-spring.security.oauth2.client.provider.orcid.authorization-uri=https://sandbox.orcid.org/oauth/authorize
-spring.security.oauth2.client.provider.orcid.token-uri=https://sandbox.orcid.org/oauth/token
-spring.security.oauth2.client.provider.orcid.user-info-uri=https://sandbox.orcid.org/oauth/userinfo
-spring.security.oauth2.client.provider.orcid.jwk-set-uri=https://sandbox.orcid.org/oauth/jwks
+spring.security.oauth2.client.provider.orcid.authorization-uri=${ORCID_AUTHORIZATION_URL:https://sandbox.orcid.org/oauth/authorize}
+spring.security.oauth2.client.provider.orcid.token-uri=${ORCID_TOKEN_URI:https://sandbox.orcid.org/oauth/token}
+spring.security.oauth2.client.provider.orcid.user-info-uri=${ORCID_USERINFO_URI:https://sandbox.orcid.org/oauth/userinfo}
+spring.security.oauth2.client.provider.orcid.jwk-set-uri=${ORCID_JWK_SET_URI:https://sandbox.orcid.org/oauth/jwks}
 #logging.level.org.springframework.security.web=DEBUG
 ###############################################################################
 ################### ActiveMQ Artemis ##########################################
