Introduce single sign-on (SSO) (#651)
* Save progress

* Save progress and first successful auth

* wip

* create user after visiting /auth

* show datamanager menu

* undo landing page route

* Save my work

* add fields

* make user inactive when created from oidc

* handle null in password converter

* separate encrypted password fetching

* provide system id instead of external identifier

* safe and load oidc users

* replace with qbic specific oidc user

* add comments

* Extend existing OidcUserService

* Prevent existing oidc users from opening registration

* Make footer injectable.

* add missing methodm to spec

* add configuration property for registration endpoint

* use spring success handler instead of custom view

* correct property names

* read active property for authentication from database

* Improve error page logging

* Complete flow for registration and login

* Move wiring to constructor

* complete email sending flow

* change page title

* Downgrade vaadin to 24.3.12

vaadin 24.4.x introduces issues with routing. So this downgrade ensures the switching of url and page tile.
Related to https://github.com/vaadin/flow/issues/19200

* add javadoc

* rename method

* remove setId method from user

* revert changes to UserId.java

* extract userid translation

also fixes project loading (considering roles)

* fix select myself in contact combobox

* add javadoc

* replace userid on profile main

* Fix name attribute

* user id in project repository

* show errors and logout on leave

* replace with userid translator

* add sonarlint suggestions

* use interface

* Consider context path

* add environment variables

* add environment variables

* ensures completed openid connect registration

* avoid nullpointers

* Refactor/orcid oauth UI (#686)

* Provide login with orcId as card based design in LoginLayout

* Extract LoginCard into seperate

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -11,13 +11,13 @@ logging.level.org.atmosphere=warn
 # entitymanagers requires you to separate your database entity classes into
 # separate packages.
 ### Finance datasource
-qbic.finance.datasource.url=${FINANCE_DB_URL:localhost}
+qbic.finance.datasource.url=${FINANCE_DB_URL:127.0.0.1}
 qbic.finance.datasource.driver-class-name=${FINANCE_DB_DRIVER:com.mysql.cj.jdbc.Driver}
 qbic.finance.datasource.username=${FINANCE_DB_USER_NAME:myusername}
 qbic.finance.datasource.password=${FINANCE_DB_USER_PW:astrongpassphrase!}
 qbic.finance.datasource.ddl-auto=${FINANCE_DB_DDL_AUTO:none}
 ### data-management datasource
-qbic.data-management.datasource.url=${DATAMANAGEMENT_DB_URL:localhost}
+qbic.data-management.datasource.url=${DATAMANAGEMENT_DB_URL:127.0.0.1}
 qbic.data-management.datasource.driver-class-name=${DATAMANAGEMENT_DB_DRIVER:com.mysql.cj.jdbc.Driver}
 qbic.data-management.datasource.username=${DATAMANAGEMENT_DB_USER_NAME:myusername}
 qbic.data-management.datasource.password=${DATAMANAGEMENT_DB_USER_PW:astrongpassphrase!}
@@ -62,7 +62,7 @@ spring.mail.default-encoding=UTF-8
 spring.mail.port=${MAIL_PORT:587}
 # Sometimes additional information about the instance is needed for an email
 # these properties are configured here
-service.host.name=${DM_SERVICE_HOST:localhost}
+service.host.name=${DM_SERVICE_HOST:127.0.0.1}
 service.host.protocol=${DM_HOST_PROTOCOL:https}
 service.host.port=${DM_SERVICE_PORT:-1}
 ###############################################################################
@@ -81,15 +81,29 @@ vaadin.launch-browser=false
 ###############################################################################
 ################### Routing ###################################################
 # route for mail confirmation consumption
-email-confirmation-endpoint=${EMAIL_CONFIRMATION_ENDPOINT:/login}
-email-confirmation-parameter=${EMAIL_CONFIRMATION_PARAMETER:confirm-email}
+routing.email-confirmation.endpoint=${EMAIL_CONFIRMATION_ENDPOINT:/login}
+routing.email-confirmation.confirmation-parameter=${EMAIL_CONFIRMATION_PARAMETER:confirm-email}
 # route for password reset
-password-reset-endpoint=${PASSWORD_RESET_ENDPOINT:/registration/new-password}
-password-reset-parameter=${PASSWORD_RESET_PARAMETER:user-id}
+routing.password-reset.endpoint=${PASSWORD_RESET_ENDPOINT:/registration/new-password}
+routing.password-reset.reset-parameter=${PASSWORD_RESET_PARAMETER:user-id}
 # route to project resource
-project-endpoint=/projects
-project-info-endpoint=/projects/%s/info
-project-samples-endpoint=/projects/%s/samples
+routing.projects.endpoint=/projects
+routing.projects.info.endpoint=/projects/%s/info
+routing.projects.samples.enpoint=/projects/%s/samples
+routing.registration.oidc.orcid.endpoint=/register/oidc
+routing.registration.error.pending-email-verification=/register/pending-email-confirmation
+################## oauth provider ###########################
+spring.security.oauth2.client.registration.orcid.client-name=orcid
+spring.security.oauth2.client.registration.orcid.client-id=${ORCID_CLIENT_ID:id}
+spring.security.oauth2.client.registration.orcid.client-secret=${ORCID_CLIENT_SECRET:secret}
+spring.security.oauth2.client.registration.orcid.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.orcid.redirect-uri=${ORCID_REDIRECT_URI:{baseUrl}/login/oauth2/code/orcid}
+spring.security.oauth2.client.registration.orcid.scope=openid
+spring.security.oauth2.client.provider.orcid.authorization-uri=${ORCID_AUTHORIZATION_URL:https://sandbox.orcid.org/oauth/authorize}
+spring.security.oauth2.client.provider.orcid.token-uri=${ORCID_TOKEN_URI:https://sandbox.orcid.org/oauth/token}
+spring.security.oauth2.client.provider.orcid.user-info-uri=${ORCID_USERINFO_URI:https://sandbox.orcid.org/oauth/userinfo}
+spring.security.oauth2.client.provider.orcid.jwk-set-uri=${ORCID_JWK_SET_URI:https://sandbox.orcid.org/oauth/jwks}
+#logging.level.org.springframework.security.web=DEBUG
 ###############################################################################
 ################### ActiveMQ Artemis ##########################################
 # ActiveMQ Artemis is used as a global message broker handling
