--- a/user-interface/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/user-interface/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -103,7 +103,12 @@
     {
       "name": "openbis.datasource.dss.url",
       "type": "java.lang.String",
-      "description": "URL of the openbis datastore server containing the measurement information."
+      "description": "URL of the openbis datastore server containing the measurement information"
+    },
+    {
+      "name": "routing.registration.oidc.orcid.endpoint",
+      "type": "java.lang.String",
+      "description": "The routing target for openid connect registration"
     },
     {
       "name": "qbic.communication.data-manager.source-code.url",
