Add cookie max age property

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -132,4 +132,7 @@ qbic.communication.contact.email=${CONTACT_EMAIL:support@qbic.zendesk.com}
 qbic.communication.contact.subject=${CONTACT_SUBJECT:Data Management Question}
 qbic.communication.api.url=${API_URL:https://download.qbic.uni-tuebingen.de/swagger-ui.html}
 ################# Session handling ############################################
-server.servlet.session.timeout=${SESSION_TIMEOUT:30m}
+server.servlet.session.timeout=${SESSION_TIMEOUT:1m}
+vaadin.closeIdleSessions=${SESSION_CLOSEIDLESESSIONS:true}
+vaadin.heartbeatInterval=${SESSION_HEARTBEATINTERVAL:300}
+server.servlet.session.cookie.max-age=${SESSION_COOKIE_MAX_AGE:1m}
