--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -131,8 +131,11 @@ qbic.communication.documentation.url=${DOCUMENTATION_URL:https://qbicsoftware.gi
 qbic.communication.contact.email=${CONTACT_EMAIL:support@qbic.zendesk.com}
 qbic.communication.contact.subject=${CONTACT_SUBJECT:Data Management Question}
 qbic.communication.api.url=${API_URL:https://download.qbic.uni-tuebingen.de/swagger-ui.html}
-################# Session handling ############################################
+################# Session servlet handling ############################################
 server.servlet.session.timeout=${SESSION_TIMEOUT:1m}
 vaadin.closeIdleSessions=${SESSION_CLOSEIDLESESSIONS:true}
 vaadin.heartbeatInterval=${SESSION_HEARTBEATINTERVAL:300}
+################# Session cookie handling ############################################
 server.servlet.session.cookie.max-age=${SESSION_COOKIE_MAX_AGE:1m}
+server.servlet.session.cookie.secure=${SESSION_COOKIE_SECURE:true}
+server.servlet.session.cookie.domain=${SESSION_COOKIE_DOMAIN:de.uni-tuebingen.qbic}
