--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -75,6 +75,7 @@ openbis.datasource.dss.url=${OPENBIS_DSS_URL:}
 ################### Vaadin configuration ######################################
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters.
+# See https://vaadin.com/docs/latest/flow/configuration/properties#properties for property reference
 vaadin.allowed-packages=com.vaadin,org.vaadin,dev.hilla,life.qbic
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=false
