Provide comment with heartbeat documentation

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -135,6 +135,7 @@ qbic.communication.api.url=${API_URL:https://download.qbic.uni-tuebingen.de/swag
 ################# Session servlet handling ############################################
 server.servlet.session.timeout=${SESSION_TIMEOUT:30m}
 vaadin.closeIdleSessions=${SESSION_CLOSEIDLESESSIONS:true}
+# Heartbeat value is specified as integer time in seconds
 vaadin.heartbeatInterval=${SESSION_HEARTBEATINTERVAL:300}
 ################# Session cookie handling ############################################
 server.servlet.session.cookie.max-age=${SESSION_COOKIE_MAX_AGE:30m}
