--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -75,6 +75,7 @@ openbis.datasource.dss.url=${OPENBIS_DSS_URL:}
 ################### Vaadin configuration ######################################
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters.
+# See https://vaadin.com/docs/latest/flow/configuration/properties#properties for property reference
 vaadin.allowed-packages=com.vaadin,org.vaadin,dev.hilla,life.qbic
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=false
@@ -110,6 +111,15 @@ qbic.broadcasting.identity.topic=User
 spring.servlet.multipart.max-file-size=16777216
 spring.servlet.multipart.fileSizeThreshold=16MB
 spring.servlet.multipart.max-request-size=16MB
+################# Session servlet handling ############################################
+server.servlet.session.timeout=${SESSION_TIMEOUT:30m}
+vaadin.closeIdleSessions=${SESSION_CLOSEIDLESESSIONS:true}
+# Heartbeat value is specified as integer time in seconds
+vaadin.heartbeatInterval=${SESSION_HEARTBEATINTERVAL:300}
+################# Session cookie handling ############################################
+server.servlet.session.cookie.max-age=${SESSION_COOKIE_MAX_AGE:30m}
+server.servlet.session.cookie.secure=${SESSION_COOKIE_SECURE:true}
+server.servlet.session.cookie.domain=${SESSION_COOKIE_DOMAIN:de.uni-tuebingen.qbic}
 ###############################################################################
 ################### Dev Tools #################################################
 spring.devtools.livereload.enabled=true
@@ -131,5 +141,3 @@ qbic.communication.documentation.url=${DOCUMENTATION_URL:https://qbicsoftware.gi
 qbic.communication.contact.email=${CONTACT_EMAIL:support@qbic.zendesk.com}
 qbic.communication.contact.subject=${CONTACT_SUBJECT:Data Management Question}
 qbic.communication.api.url=${API_URL:https://download.qbic.uni-tuebingen.de/swagger-ui.html}
-################# Session handling ############################################
-server.servlet.session.timeout=${SESSION_TIMEOUT:30m}
