--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -92,7 +92,8 @@ routing.projects.info.endpoint=/projects/%s/info
 routing.projects.samples.enpoint=/projects/%s/samples
 routing.registration.oidc.orcid.endpoint=/register/oidc
 routing.registration.error.pending-email-verification=/register/pending-email-confirmation
-################## oauth provider ###########################
+###############################################################################
+################## oauth provider #############################################
 spring.security.oauth2.client.registration.orcid.client-name=orcid
 spring.security.oauth2.client.registration.orcid.client-id=${ORCID_CLIENT_ID:id}
 spring.security.oauth2.client.registration.orcid.client-secret=${ORCID_CLIENT_SECRET:secret}
@@ -137,13 +138,22 @@ spring.cache.jcache.config=classpath:ehcache3.xml
 ################### Token Generation ##########################################
 qbic.access-token.salt=${ACCESS_TOKEN_SALT:1213213213921093213982103821983928139218390281930812092189}
 qbic.access-token.iteration-count=${ACCESS_TOKEN_ITERATIONS:100000}
+###############################################################################
 ################### Data Server Information ###################################
 server.download.api.measurement.url=${DOWNLOAD_MEASUREMENT_API_URL:}
+###############################################################################
 ################## External links and contacts ###############################
 qbic.communication.data-manager.source-code.url=https://github.com/qbicsoftware/data-manager-app
 qbic.communication.documentation.url=${DOCUMENTATION_URL:https://qbicsoftware.github.io/research-data-management/}
 qbic.communication.contact.email=${CONTACT_EMAIL:support@qbic.zendesk.com}
 qbic.communication.contact.subject=${CONTACT_SUBJECT:Data Management Question}
 qbic.communication.api.url=${API_URL:https://download.qbic.uni-tuebingen.de/swagger-ui.html}
+###############################################################################
 ################# Session handling ############################################
 server.servlet.session.timeout=${SESSION_TIMEOUT:30m}
+###############################################################################
+################# Message providers ###########################################
+spring.messages.encoding=UTF-8
+spring.messages.cache-duration=1s
+spring.messages.fallback-to-system-locale=true
+spring.messages.basename=messages.error-messages, messages.user-notifications
