add routing toast notification

--- a/user-interface/src/main/resources/messages/user-notifications.properties
+++ b/user-interface/src/main/resources/messages/user-notifications.properties
@@ -3,6 +3,10 @@ test.dialog.message=This test contains the following objects:</br>{0}</br>{1}!
 project.changes-saved.message=Saved changes to the project.
 experiment.changes-saved.message=Saved changes to the experiment have.
 experiment.design.variable.changes-saved.message=Saved changes to the experimental variable.
+experiment.design.variable.edit.groups-exist.message=Editing experimental variables requires all experimental groups to be deleted.</br>\
+  You have <strong>{0}</strong> experimental groups.</br>\
+  Please delete the groups to edit the variables.
+experiment.design.variable.edit.groups-exist.confirm-text=Go to Experimental Groups
 experiment.design.group.changes-saved.message=Saved changes to the experimental groups.
 project.offer.uploaded.message=The offer was successfully uploaded.
 project.offer.deleted.message=Deletion of an offer was successful.
@@ -26,3 +30,5 @@ experiment.design.variable.added.message=The experimental variables were success
 experiment.design.variable.added.link-text=Go to Groups
 experiment.design.group.added.message=The experimental groups were successfully added.<br>You can now register samples.
 experiment.design.group.added.link-text=Go to Samples
+routing.experiment.to.samples.message=You can now register sample batches.
+routing.experiment.to.samples.link-text=Go to Samples
