replace some notifications

--- a/user-interface/src/main/resources/messages/user-notifications.properties
+++ b/user-interface/src/main/resources/messages/user-notifications.properties
@@ -12,8 +12,8 @@ project.offer.uploaded.message=The offer was successfully uploaded.
 project.offer.deleted.message=Deletion of an offer was successful.
 project.sampleqc.uploaded.message=The Sample QC report was successfully uploaded.
 project.sampleqc.deleted.message=Deletion of the Sample QC report was successful.
-samples.batch.changes-saved.message=Saved changes to the sample batch.
-samples.batch.deleted.message=Deletion of sample batch <span class="batch-name">{0}</span> successful.
+samples.batch.changes-saved.message=Saved changes to sample batch <strong>{0}</strong>.
+samples.batch.deleted.message=Deletion of sample batch <strong>{0}</strong> successful.
 samples.batch.registered.message=A sample batch was successfully registered.</br>You can now register measurements.
 samples.batch.registered.link-text=Go to Measurements
 project.access.collaborator.added.message=User {0} was successfully added to this project.
@@ -25,7 +25,7 @@ experiment.measurements.deleted.message={0} measurements were successfully delet
 experiment.measurements.registered.message={0} measurements were successfully registered.
 project.created.message=The project was successfully created.</br>You can now design your experiment.
 project.created.link-text=Go to Experiment
-experiment.created.message=The experiment was successfully created
+experiment.created.message=Successfully created experiment <strong>{0}</strong>.
 experiment.design.variable.added.message=The experimental variables were successfully added.</br>You can now create groups.
 experiment.design.variable.added.link-text=Go to Groups
 experiment.design.group.added.message=The experimental groups were successfully added.<br>You can now register samples.
