add link to messageformat docs

--- a/user-interface/src/main/resources/messages/user-notifications.properties
+++ b/user-interface/src/main/resources/messages/user-notifications.properties
@@ -1,5 +1,4 @@
-test.dialog.title=This is a test
-test.dialog.message=This test contains the following objects:</br>{0}</br>{1}!
+# Messages in java message format https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/text/MessageFormat.html
 project.changes-saved.message=Saved changes to the project.
 experiment.changes-saved.message=Saved changes to the experiment have.
 experiment.design.variable.changes-saved.message=Saved changes to the experimental variable.
