improve session logging

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -125,12 +125,18 @@ qbic.broadcasting.identity.topic=User
 spring.servlet.multipart.max-file-size=16777216
 spring.servlet.multipart.fileSizeThreshold=16MB
 spring.servlet.multipart.max-request-size=16MB
-################# Session servlet handling ############################################
+###############################################################################
+################# Session servlet handling ####################################
+#https://mvysny.github.io/vaadin-session-timeout/
+# Close sessions after the servlet timeout except when there is activity.
+# If there is activity and the session timeout is reached, the session is closed after three missed heartbeats.
+# Keep in mind that it can take up to 1 minute after timeout to close the session.
+# Session closes at server.servlet.session.timeout + 3*vaadin.heartbeatInterval + 0-1min
 server.servlet.session.timeout=${SESSION_TIMEOUT:30m}
 vaadin.closeIdleSessions=${SESSION_CLOSEIDLESESSIONS:true}
 # Heartbeat value is specified as integer time in seconds
 vaadin.heartbeatInterval=${SESSION_HEARTBEATINTERVAL:60}
-################# Session cookie handling ############################################
+################# Session cookie handling #####################################
 server.servlet.session.cookie.max-age=${SESSION_COOKIE_MAX_AGE:30m}
 server.servlet.session.cookie.secure=${SESSION_COOKIE_SECURE:true}
 server.servlet.session.cookie.domain=${SESSION_COOKIE_DOMAIN:de.uni-tuebingen.qbic}
