--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -140,6 +140,7 @@ vaadin.heartbeatInterval=${SESSION_HEARTBEATINTERVAL:60}
 server.servlet.session.cookie.max-age=${SESSION_COOKIE_MAX_AGE:30m}
 server.servlet.session.cookie.secure=${SESSION_COOKIE_SECURE:true}
 server.servlet.session.cookie.domain=${SESSION_COOKIE_DOMAIN:de.uni-tuebingen.qbic}
+server.servlet.session.cookie.same-site=${SESSION_COOKIE_SAME_SITE:lax}
 ###############################################################################
 ################### Dev Tools #################################################
 spring.devtools.livereload.enabled=true
