--- a/.github/ISSUE_TEMPLATE/02-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/02-bug-report.yml
@@ -1,6 +1,6 @@
 name: Bug Report
 description: File a bug report.
-title: "[Bug]: "
+title: "[Provide a short descriptive title]"
 labels: ["bug", "triage"]
 projects: ["qbicsoftware/25"]
 assignees:
@@ -40,7 +40,7 @@ body:
     id: terms
     attributes:
       label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://github.com/qbicsoftware/data-manager-app/blob/chore/bug-issue-form/CODE_OF_CONDUCT.md). 
+      description: By submitting this issue, you agree to follow our [Code of Conduct](https://github.com/qbicsoftware/data-manager-app?tab=coc-ov-file).
       options:
         - label: I agree to follow this project's Code of Conduct
           required: true
