--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -162,3 +162,6 @@ qbic.communication.documentation.url=${DOCUMENTATION_URL:https://qbicsoftware.gi
 qbic.communication.contact.email=${CONTACT_EMAIL:support@qbic.zendesk.com}
 qbic.communication.contact.subject=${CONTACT_SUBJECT:Data Management Question}
 qbic.communication.api.url=${API_URL:https://download.qbic.uni-tuebingen.de/swagger-ui.html}
+################# Terminology Service ########################################
+tib.terminology.service.endpoint.select=${TIB_SERVICE_API_SELECT_ENDPOINT:/ts4tib/api/select}
+tib.terminology.service.api.url=${TIB_SERVICE_API_URL:https://service.tib.eu}
