Provide search endpoint for obo id

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -165,3 +165,4 @@ qbic.communication.api.url=${API_URL:https://download.qbic.uni-tuebingen.de/swag
 ################# Terminology Service ########################################
 tib.terminology.service.endpoint.select=${TIB_SERVICE_API_SELECT_ENDPOINT:/ts4tib/api/select}
 tib.terminology.service.api.url=${TIB_SERVICE_API_URL:https://service.tib.eu}
+tib.terminology.service.endpoint.search=${TIB_SERVICE_API_SEARCH_ENDPOINT:/ts4tib/api/search}
