Add toast notifications

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -162,3 +162,12 @@ qbic.communication.documentation.url=${DOCUMENTATION_URL:https://qbicsoftware.gi
 qbic.communication.contact.email=${CONTACT_EMAIL:support@qbic.zendesk.com}
 qbic.communication.contact.subject=${CONTACT_SUBJECT:Data Management Question}
 qbic.communication.api.url=${API_URL:https://download.qbic.uni-tuebingen.de/swagger-ui.html}
+###############################################################################
+################### Message providers #########################################
+spring.messages.encoding=UTF-8
+spring.messages.cache-duration=1s
+spring.messages.fallback-to-system-locale=true
+spring.messages.basename=messages.error-messages, messages.toast-notifications
+# you always have to escape single quotes by another single quote ' -> ''
+# https://www.mscharhag.com/java/resource-bundle-single-quote-escaping for reference
+spring.messages.always-use-message-format=true
