--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -10,6 +10,7 @@
 ############### Optional properties
 ## (<key>.closeable) Whether the notification should be closeable
 # foo.bar.closeable=true
+## (<key>.duration) Duration on how long to keep the notification open. //TODO
 ##################################################################################################
 from.experiment.to.sample.batch.message.type=text
 from.experiment.to.sample.batch.message.text=You can now register sample batches.
