Add duration configuration

--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -10,7 +10,7 @@
 ############### Optional properties
 ## (<key>.closeable) Whether the notification should be closeable
 # foo.bar.closeable=true
-## (<key>.duration) Duration on how long to keep the notification open. //TODO
+## (<key>.duration) Duration on how long to keep the notification open.
 ##################################################################################################
 from.experiment.to.sample.batch.message.type=text
 from.experiment.to.sample.batch.message.text=You can now register sample batches.
@@ -20,3 +20,4 @@ experiment.created.success.message.type=html
 experiment.created.success.message.text=Created experiment <strong>{0}</strong>.
 personal-access-token.created.success.message.type=html
 personal-access-token.created.success.message.text=Personal Access Token <strong>{0}</strong> was created.
+personal-access-token.created.success.duration=PT8s
