--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -10,7 +10,9 @@
 ############### Optional properties
 ## (<key>.closeable) Whether the notification should be closeable
 # foo.bar.closeable=true
-## (<key>.duration) Duration on how long to keep the notification open.
+## (<key>.duration) Duration on how long to keep the notification open. Specified in ISO-8601 format
+# foo.bar.duration=PT1m # for one minute
+# foo.bar.duration=PT1s # for one second
 ##################################################################################################
 from.experiment.to.sample.batch.message.type=text
 from.experiment.to.sample.batch.message.text=You can now register sample batches.
