add level to toast properties

--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -13,6 +13,8 @@
 ## (<key>.duration) Duration on how long to keep the notification open. Specified in ISO-8601 format
 # foo.bar.duration=PT1m # for one minute
 # foo.bar.duration=PT1s # for one second
+## (<key>.level) The level of the toast notification one of [info, success]. If none is provided, info is chosen.
+# foo.bar.level=info
 ##################################################################################################
 from.experiment.to.sample.batch.message.type=text
 from.experiment.to.sample.batch.message.text=You can now register sample batches.
@@ -23,3 +25,4 @@ experiment.created.success.message.text=Created experiment <strong>{0}</strong>.
 personal-access-token.created.success.message.type=html
 personal-access-token.created.success.message.text=Personal Access Token <strong>{0}</strong> was created.
 personal-access-token.created.success.duration=PT8s
+personal-access-token.created.success.level=success
