--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -4,6 +4,8 @@
 # foo.bar.message.type=text
 ## (<key>.message.text) Provide the text to show. Escape ' by ''
 # foo.bar.message.text=This is someone''s awesome {0}!
+## (<key>.level) The level of the toast notification one of [info, success].
+# foo.bar.level=info
 ############### MANDATORY additional properties for routing toasts
 ## (<key>.routing.link.text) The text to show as link
 # foo.bar.routing.link.text=Go to Samples
@@ -13,15 +15,14 @@
 ## (<key>.duration) Duration on how long to keep the notification open. Specified in ISO-8601 format
 # foo.bar.duration=PT1m # for one minute
 # foo.bar.duration=PT1s # for one second
-## (<key>.level) The level of the toast notification one of [info, success]. If none is provided, info is chosen.
-# foo.bar.level=info
 ##################################################################################################
 from.experiment.to.sample.batch.message.type=text
 from.experiment.to.sample.batch.message.text=You can now register sample batches.
-from.experiment.to.sample.batch.closeable=true
+from.experiment.to.sample.batch.level=info
 from.experiment.to.sample.batch.routing.link.text=Go to Samples
 experiment.created.success.message.type=html
 experiment.created.success.message.text=Created experiment <strong>{0}</strong>.
+experiment.created.success.message.level=success
 personal-access-token.created.success.message.type=html
 personal-access-token.created.success.message.text=Personal Access Token <strong>{0}</strong> was created.
 personal-access-token.created.success.duration=PT8s
