Remove cancel confirmation interfaces

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -171,7 +171,7 @@ terminology.service.tib.endpoint.search=${TIB_SERVICE_API_SEARCH_ENDPOINT:/ts4ti
 spring.messages.encoding=UTF-8
 spring.messages.cache-duration=1s
 spring.messages.fallback-to-system-locale=true
-spring.messages.basename=messages.error-messages, messages.toast-notifications
+spring.messages.basename=messages.error-messages, messages.toast-notifications, messages.dialog-messages
 # you always have to escape single quotes by another single quote ' -> ''
 # https://www.mscharhag.com/java/resource-bundle-single-quote-escaping for reference
 spring.messages.always-use-message-format=true
