rename message key

--- a/user-interface/src/main/resources/messages/dialog-messages.properties
+++ b/user-interface/src/main/resources/messages/dialog-messages.properties
@@ -5,7 +5,11 @@
 ## (dialog-key).cancel-confirmation.message.type -> can be text or html. MUST BE PROVIDED
 ## (dialog-key).cancel-confirmation.message.text -> the text or html to display
 ## (dialog-key).cancel-confirmation.confirm-text -> the text on the button that confirms the cancel operation
-create-project.cancel-confirmation.title=Discard new project creation?
-create-project.cancel-confirmation.message.type=text
-create-project.cancel-confirmation.message.text=You will lose all the information entered for this project.
-create-project.cancel-confirmation.confirm-text=Discard project creation
+project.create.cancel-confirmation.title=Discard new project creation?
+project.create.cancel-confirmation.message.type=text
+project.create.cancel-confirmation.message.text=You will lose all the information entered for this project.
+project.create.cancel-confirmation.confirm-text=Discard project creation
+#sample-batch.edit.cancel-confirmation.title=TBD
+#sample-batch.edit.cancel-confirmation.message.type=TBD
+#sample-batch.edit.cancel-confirmation.message.text=TBD
+#sample-batch.edit.cancel-confirmation.confirm-text=TBD
